src/test/deca/syntax/invalid/26_class_bad_visibility.deca
// Description:
//    Test d'une visibilité non existante
//
// Resultats:
//    Ligne 11
//
// Historique:
//    cree le 01/01/2023

class A extends B {
    private int x = 5;
    
}